# bls-signatures

./: .flake8  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  SPEC.md  emsdk_build.sh  flake.nix  js_build.sh  js_test.sh  lgtm.yml  libbls.mri  pyproject.toml  setup.py  setupwin.py  test2.py  windows-build.sh
.github/workflows/: build-aarch64.yml  build-blst-nightly.yml  build-m1-wheel.yml  build-test-riscv64.yml  build-test.yaml  build-test.yml  build-wheels.yml  build.yml  codeql.yml  js-bindings.yml  relic-nightly.yml  stale-issue.yml
blspy_py/: __init__.py
cmake_modules/: Findgmp.cmake  Findrelic.cmake  Findsodium.cmake
contrib/relic/: CMakeLists.txt  ChiaWinCMakeLists.txt  wjb
contrib/relic/bench/: bench_epx.c  bench_pc.c
contrib/relic/cmake/: arch.cmake  eb.cmake  ed.cmake  fb.cmake
contrib/relic/include/: relic.h  relic_alloc.h  relic_bn.h  relic_conf.h  relic_conf.h.in  relic_core.h  relic_eb.h  relic_ed.h  relic_ep.h  relic_epx.h  relic_fp.h  (+3 more)
flutter-bindings/: CMakeLists.txt
flutter-bindings/bls_signatures_ffi/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
flutter-bindings/bls_signatures_ffi/android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
flutter-bindings/bls_signatures_ffi/android/src/main/: AndroidManifest.xml
flutter-bindings/bls_signatures_ffi/android/src/main/kotlin/net/chia/bls_signatures_ffi/: BlsSignaturesFfiPlugin.kt
flutter-bindings/bls_signatures_ffi/example/: README.md  pubspec.yaml
flutter-bindings/bls_signatures_ffi/example/android/app/: build.gradle
flutter-bindings/bls_signatures_ffi/example/android/app/src/main/: AndroidManifest.xml
flutter-bindings/bls_signatures_ffi/example/android/app/src/main/kotlin/net/chia/bls_signatures_ffi_example/: MainActivity.kt
flutter-bindings/bls_signatures_ffi/example/android/app/src/profile/: AndroidManifest.xml
flutter-bindings/bls_signatures_ffi/example/ios/Runner/: Info.plist
flutter-bindings/bls_signatures_ffi/example/ios/Runner.xcodeproj/: project.pbxproj
flutter-bindings/bls_signatures_ffi/example/lib/: main.dart
flutter-bindings/bls_signatures_ffi/example/test/: aggregate_test.dart  aug_scheme_mpl_test.dart  basic_scheme_mpl_test.dart  pop_scheme_mpl_test.dart  readme_test.dart  sign_verify_test.dart  util.dart  vector_invalid.dart  vector_valid.dart  widget_test.dart
flutter-bindings/bls_signatures_ffi/example/test_driver/: main.dart
flutter-bindings/bls_signatures_ffi/ios/: bls_signatures_ffi.podspec
flutter-bindings/bls_signatures_ffi/ios/Classes/: BlsSignaturesFfiPlugin.h  BlsSignaturesFfiPlugin.m  SwiftBlsSignaturesFfiPlugin.swift
flutter-bindings/bls_signatures_ffi/ios/bls/: blschia.cpp  blschia.h  elements.cpp  elements.h  error.h  privatekey.cpp  privatekey.h  schemes.cpp  schemes.h  utils.cpp  utils.hpp
flutter-bindings/bls_signatures_ffi/lib/: bls_signatures_ffi.dart
flutter-bindings/bls_signatures_ffi/lib/src/: blschia.dart  blschia.h.dart  elements.dart  exception.dart  privatekey.dart  schemes.dart
flutter-bindings/bls_signatures_ffi/test/: bls_signatures_ffi_test.dart
go-bindings/: Makefile  README.md  aggregationinfo.cpp  aggregationinfo.go  aggregationinfo.h  aggregationinfo_test.go  blschia.cpp  blschia.h  chaincode.cpp  chaincode.go  chaincode.h  chaincode_test.go  elements.cpp  elements.go  elements.h  error.go  error.h  extendedprivatekey.cpp  extendedprivatekey.go  extendedprivatekey.h  extendedprivatekey_test.go  extendedpublickey.cpp  extendedpublickey.go  extendedpublickey.h  extendedpublickey_test.go  go.mod  privatekey.cpp  privatekey.go  privatekey.h  privatekey_test.go  publickey.cpp  publickey.go  publickey.h  publickey_test.go  schemes.cpp  schemes.go  schemes.h  schemes_test.go  signature.cpp  signature.go  (+10 more)
js-bindings/: .editorconfig  CMakeLists.txt  README.md  blsjs.d.ts  helpers.cpp  helpers.h  jest.config.js  jsbindings.cpp  package-lock.json  package.json
js-bindings/tests/: AggregationInfo.spec.js  AugSchemeMPL.test.js  Bignum.test.js  ChainCode.spec.js  ExtendedPrivateKey.spec.js  ExtendedPublicKey.spec.js  PrivateKey.spec.js  PublicKey.spec.js  Signature.spec.js  Threshold.js  Threshold.spec.js  basic.test.js  createModule.test.js  karma.conf.js  package.json  readme.test.js  scheme.test.js  test.js  testVector.test.js  typings.spec.ts
js-bindings/tests_old/: package.json
js-bindings/wrappers/: AggregationInfoWrapper.cpp  AggregationInfoWrapper.h  BignumWrapper.cpp  BignumWrapper.h  ChainCodeWrapper.cpp  ChainCodeWrapper.h  ExtendedPrivateKeyWrapper.cpp  ExtendedPrivateKeyWrapper.h  ExtendedPublicKeyWrapper.cpp  ExtendedPublicKeyWrapper.h  G1ElementWrapper.cpp  G1ElementWrapper.h  G2ElementWrapper.cpp  G2ElementWrapper.h  JSWrapper.h  PrivateKeyWrapper.cpp  PrivateKeyWrapper.h  PublicKeyWrapper.cpp  PublicKeyWrapper.h  SchemeMPLWrapper.h  SignatureWrapper.cpp  SignatureWrapper.h  ThresholdWrapper.cpp  ThresholdWrapper.h  UtilWrapper.cpp  UtilWrapper.h
python/: CMakeLists.txt  README.md  pythonbindings.cpp
python-bindings/: CMakeLists.txt  README.md  pythonbindings.cpp  sample_hdkey.py  test.py  test_debug.py  testvectors.py
python-impl/: README.md  aggregation_info.py  bls.py  bls12381.py  ec.py  fields.py  hash_to_field.py  hd_keys.py  hkdf.py  impl-test.py  keys.py  op_swu_g1.py  op_swu_g2.py  pairing.py  private_key.py  schemes.py  signature.py  tests.py  threshold.py  util.py
src/: CMakeLists.txt  aggregationinfo.cpp  aggregationinfo.hpp  bls.cpp  bls.hpp  blsprivatekey.cpp  blsprivatekey.hpp  blspublickey.cpp  blspublickey.hpp  blssignature.cpp  blssignature.hpp  blstasm.lib  blsutil.hpp  chaincode.cpp  chaincode.hpp  elements.cpp  elements.hpp  extendedprivatekey.cpp  extendedprivatekey.hpp  extendedpublickey.cpp  extendedpublickey.hpp  hdckd.hpp  hdkeys.hpp  hkdf.hpp  privatekey.cpp  privatekey.hpp  publickey.cpp  publickey.hpp  runbench  runtest  schemes.cpp  schemes.hpp  signature.cpp  signature.hpp  test-bench.cpp  test-mcl.cpp  test-utils.hpp  test.cpp  threshold.cpp  threshold.hpp  (+1 more)
test-vectors/: fips_186_3_P256  rfc6979
(+40 files in other folders)
